Corrected type on github action
Signed-off-by: Felipe Avelar <felipe.avelar@checkmarx.com>

--- a/.github/workflows/kics-scan-action.yml
+++ b/.github/workflows/kics-scan-action.yml
@@ -1,10 +1,10 @@
 name: kics-scan-action
+
 on:
   push:
     branches:
       - main
-  workflow:
-    - kics-scan-action
+  workflow_dispatch:
 
 jobs:
   kics-job:
