--- a/.github/workflows/kics-scan-action.yml
+++ b/.github/workflows/kics-scan-action.yml
@@ -22,17 +22,19 @@ jobs:
         path: '.'
         ignore_on_exit: results # Just throws an error if the scan fails, not with invalid results
         output_formats: "json,html"
-        verbose: true
+        ci: true
     # Display the results in json format
-    - name: display kics results
+    - name: Display kics results
       run: |
-        cat results.json
+        cat results/results.json
     # Upload results after scan
     - uses: actions/upload-artifact@v2
+    - name: Upload kics results.json
       with:
         name: results-json-${{ github.run_id }}
         path: results/results.json
     - uses: actions/upload-artifact@v2
+    - name: Upload kics results.html
       with:
         name: results-html-${{ github.run_id }}
         path: results/results.html
