Added output path
Signed-off-by: Felipe Avelar <felipe.avelar@checkmarx.com>

--- a/.github/workflows/kics-scan-action.yml
+++ b/.github/workflows/kics-scan-action.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         # scanning all directories
         path: '.'
+        output_path: results
         ignore_on_exit: results # Just throws an error if the scan fails, not with invalid results
         output_formats: "json,html"
         ci: true
