--- a/.github/workflows/kics-scan-action.yml
+++ b/.github/workflows/kics-scan-action.yml
@@ -24,7 +24,7 @@ jobs:
         # scanning all directories
         path: '.'
         output_path: results
-        output_formats: "json,html"
+        output_formats: "json,html,sarif"
         verbose: true
     # Display the results in json format
     - name: Display kics results
@@ -44,3 +44,8 @@ jobs:
       with:
         name: results-html-${{ github.run_id }}
         path: results/results.html
+    - name: Upload SARIF file
+      if: always()
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: results.sarif
