--- a/.github/workflows/kics-scan-action.yml
+++ b/.github/workflows/kics-scan-action.yml
@@ -48,4 +48,4 @@ jobs:
       if: always()
       uses: github/codeql-action/upload-sarif@v1
       with:
-        sarif_file: results.sarif
+        sarif_file:  results/results.sarif
